# aigov-redact

./: .gitignore  CHANGELOG.md  FLOW.md  LICENSE  PITCH.md  PUBLISH.md  README.md  example-config.json  pyproject.toml
.aigov-redact/: history.jsonl
src/aigov_redact/: __init__.py  auditor.py  config.py  detector.py  models.py  patterns.py  redactor.py  usage.py
src/aigov_redact/cli/: main.py
src/aigov_redact/ner/: presidio.py
tests/: test_auditor.py  test_cli.py  test_config.py  test_detector.py  test_ner.py  test_patterns.py  test_redactor.py  test_usage.py
tests/fixtures/: .aigov-redact-config  prompt_clean.txt  prompt_mixed.txt  prompt_with_pii.txt
