[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigov-redact"
version = "0.1.4"
description = "PII Redactor for LLM Data — Library + CLI. Redact sensitive data before sending to LLM APIs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["pii", "redaction", "privacy", "llm", "genai", "security", "data-privacy", "anonymization"]
authors = [
    { name = "aigov-redact contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
ner = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]
yaml = [
    "PyYAML>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]
all = [
    "aigov-redact[ner,yaml,dev]",
]

[project.urls]
Homepage = "https://github.com/shashi3070/aigov-redact"
Documentation = "https://github.com/shashi3070/aigov-redact#readme"
Repository = "https://github.com/shashi3070/aigov-redact"
Changelog = "https://github.com/shashi3070/aigov-redact/blob/main/CHANGELOG.md"

[project.scripts]
aigov-redact = "aigov_redact.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aigov_redact*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = ["*.egg-info/", "dist/", "build/"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["src/aigov_redact"]
